--- a/src/app/pages/product-inventory/inventory-resources/inventory-resources.component.html
+++ b/src/app/pages/product-inventory/inventory-resources/inventory-resources.component.html
@@ -3,7 +3,7 @@
         <div class="w-full h-fit mb-4 bg-secondary-50 rounded-lg dark:bg-secondary-100 dark:border-gray-800 border-secondary-50 border flex flex-col shadow-lg">
             <div class="flex w-full flex-cols items-center justify-between">
               <div class="mb-4 lg:mb-0 lg:w-1/4 p-8 justify-start">
-                  <h2 class="text-xl font-bold dark:text-white">Search criteria</h2>  
+                  <h2 class="text-xl font-bold dark:text-white">{{ 'PRODUCT_INVENTORY._search_criteria' | translate }}</h2>  
               </div>  
             </div>
             <div class="flex w-full flex-col items-center lg:flex-row justify-between">
@@ -73,6 +73,15 @@
                             Suspended
                         </label>
                       </li>
+
+                      <li class="flex items-center">
+                        <input id="unknown" type="checkbox" value="" (change)="onStateFilterChange('unknown')"
+                            class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
+            
+                        <label for="unknown" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-200">
+                            Unknown
+                        </label>
+                      </li>
                       
                   </ul>
                 </div>
@@ -131,7 +140,7 @@
                                     {{ 'OFFERINGS._status' | translate }}
                                 </th>
                                 <th scope="col" class="hidden md:table-cell px-6 py-3">
-                                    Start operating date
+                                    {{ 'PRODUCT_INVENTORY._start_date' | translate }}
                                 </th>
                             </tr>
                         </thead>
@@ -158,7 +167,7 @@
                                         <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
                                       </svg>
                                       <div>
-                                          {{ 'OFFERINGS._no_res' | translate }}
+                                          {{ 'PRODUCT_INVENTORY._no_resources' | translate }}
                                       </div>
                                     </div>
                                 </div>                          
@@ -209,7 +218,7 @@
                         <svg class="rtl:rotate-180  w-3 h-3 mx-1 text-gray-400 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
                         </svg>
-                        <span class="ms-1 text-sm font-medium text-gray-500 dark:text-white md:ms-2 ">Resource details</span>
+                        <span class="ms-1 text-sm font-medium text-gray-500 dark:text-white md:ms-2 ">{{ 'PRODUCT_INVENTORY._res_details' | translate }}</span>
                         </div>
                     </li>
                     </ol>
@@ -220,7 +229,7 @@
                 <markdown class="bg-gray-50 text-wrap break-all dark:bg-secondary-300 dark:text-white text-gray-900 pb-4 text-center" [data]="selectedRes.description ? selectedRes.description : 'CATALOGS._no_desc' | translate"></markdown>
                 @if(selectedRes.resourceCharacteristic != undefined && selectedRes.resourceCharacteristic.length>0) {
                     <div #charsContent id="chars-container">
-                        <h2 class="text-xl font-bold dark:text-white pb-4 px-4">Resource characteristics</h2>
+                        <h2 class="text-xl font-bold dark:text-white pb-4 px-4">{{ 'PRODUCT_INVENTORY._res_details' | translate }}</h2>
                         <div class="container mx-auto px-4">
                             <div class="flex flex-wrap -mx-4">
                                 @for (char of selectedRes.resourceCharacteristic; track char.id; let idx = $index) {
