ADD organization's info page

--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -39,7 +39,13 @@
             <div class="pt-2 line-clamp-5 h-fit">
                 <markdown class="dark:text-gray-200 text-wrap break-all" [data]="productOff?.description"></markdown>
             </div>            
-            <div class="grid grid-cols-2 h-fit">
+            <div class="flex flex-row justify-between h-fit">
+                @if(orgInfo!=undefined){
+                    <div class="dark:text-gray-200" >
+                        {{ 'CARD._owner' | translate }}: <a (click)="goToOrgDetails(orgInfo.id)" target="_blank" class="cursor-pointer font-medium text-primary-100 dark:text-primary-50 hover:underline">{{orgInfo.tradingName}}</a>
+                    </div>
+                    
+                  }
                 <div class="h-fit pt-2 dark:text-gray-300">V: {{productOff?.version || 'latest'}}</div>
                 <!--<div class="flex items-center justify-end">
                     <svg class="w-4 h-4 text-yellow-300 mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
