--- a/src/app/pages/product-inventory/product-inventory.component.html
+++ b/src/app/pages/product-inventory/product-inventory.component.html
@@ -46,13 +46,13 @@
       </div>
         <div>
           @if(show_prods){
-            <inventory-products></inventory-products>
+            <inventory-products [prodId]="openProdId"></inventory-products>
           }
           @if(show_serv){
-            <inventory-services [serviceId]="openServiceId"></inventory-services>
+            <inventory-services [serviceId]="openServiceId" [prodId]="openProdId"></inventory-services>
           }
           @if(show_res){
-            <inventory-resources [resourceId]="openResourceId"></inventory-resources>
+            <inventory-resources [resourceId]="openResourceId" [prodId]="openProdId"></inventory-resources>
           }
         </div>      
     </div>
